Issue #16: Workaround for Chrome layout bug.
Fixes #16 - Map and graph are now displayed side by side when
the window is expanded and transitions from 1-column to 2-column
layout. This functionality previously worked in IE and Firefox,
but not chrome. Fixed by always using inline-block display mode
instead of toggling between block (1-column) and inline-block
(2-column).

--- a/igcviewer.css
+++ b/igcviewer.css
@@ -46,7 +46,7 @@ body {
 @media print, screen and (max-width: 1100px) {
     #mapWrapper, #barogram {
         width: 90%;
-        display: block;
+        display: inline-block;
         position: relative;
     }
     
